<resources>
    <string name="app_name">Dars Jadvali [TATU UF]</string>
    <string name="no_internet_connection">Siz intenetga ulanmagansiz. Dasturdan foydalanish uchun internetga ulaning</string>
    <string name="retry">Qayta urinish</string>
    <string name="change_group">Guruhni o\'zgartirish</string>
    <string name="enter_group">Guruhni kiritish</string>
    <string name="room_name_text">%1$s xona</string>
    <string name="teacher_name_text">%1$s</string>
    <string name="settings">Sozlamalar</string>
    <string name="title_activity_settings">Sozlamalar</string>
    <string name="enable_notifications">Dars haqida bildirishnoma</string>
    <string name="main">Asosiy</string>
    <string name="notifications">Bildirishnomalar</string>
    <string name="cancel">Bekor qilish</string>
    <string name="ok">OK</string>
    <string name="add_homework">Uyga vazifa qo\'shish</string>
    <string name="homework_content">Uyga vazifa matni</string>
    <string name="add_homework_dialog_title">%s\nKeyingi dars %d.%s da</string>
    <string name="schedule_notification_title">Keyingi dars %s</string>
    <string name="homework_notification_summary">%s kun oldin</string>
    <string name="enable_notification_summary">Dars boshlanishidan 10 daqiqa oldin dars haqidagi bildirishnoma</string>
    <string name="homework_notify_time">Uyga vazifani eslatish vaqti</string>

    <string-array name="homework_notify_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="homework_notify_entries">
        <item>1 kun oldin</item>
        <item>2 kun oldin</item>
        <item>3 kun oldin</item>
    </string-array>
</resources>
