<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="Asosiy"
        app:iconSpaceReserved="false"
        android:layout="@layout/preference_category_layout">

        <SwitchPreference
            app:title="Tungi rejim"
            app:summary=""
            app:key="enable_dark_theme"
            app:iconSpaceReserved="false"
            app:defaultValue="false" />

    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/notifications"
        android:layout="@layout/preference_category_layout"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:title="@string/enable_notifications"
            app:summary="@string/enable_notification_summary"
            app:key="enable_notifications"
            app:iconSpaceReserved="false"
            android:defaultValue="true"/>

        <ListPreference
            app:key="homework_notify"
            app:title="Uyga vazifani eslatish"
            app:iconSpaceReserved="false"
            app:entries="@array/homework_notify_entries"
            app:entryValues="@array/homework_notify_entry_values"
            app:dialogTitle="Uyga vazifani eslatish"
            app:defaultValue="1"/>

        <uz.suhrob.darsjadvalitatuuf.TimePreference
            app:key="pref_time_picker"
            app:title="@string/homework_notify_time"
            app:iconSpaceReserved="false"
            app:dialogLayout="@layout/dialog_time_preference"
            app:defaultValue="17:00"
            app:negativeButtonText="@string/cancel"/>

    </PreferenceCategory>

</PreferenceScreen>
